Zmiany w QMPlay2 build 15.03.28:
	- opuszczenie okna przez mysz w trybie pełnoekranowym powoduje zamknięcie wszystkich widgetów,
	- możliwość wybrania domyślnego języka dla napisów i dźwięku,
	- HttpReader i FileReader zastąpiony przez FFReader,
	- obsługa większej liczby formatów w YouTube,
	- zmiany w domyślnym układzie okienek,
	- FFMpeg nie używa już HttpReader,
	- zmiany w oknie "Informacje",
	- poprawki w napisach pgssub,
	- możliwość zapisania grupy,
	- zgodność z FFMpeg 2.6,
	- poprawa błędów,

Zmiany w QMPlay2 build 14.12.28:
	- poprawione wczytywanie czcionek z katalogu z napisami (nie sa przeszkiwane rekursywnie),
	- główny pasek narzędzi może być oddokowany od głównego okna,
	- poprawiony crash programu skompilowanego z AVResample,
	- poprawione wyświetlanie tytułów YouTube na playliście,
	- poprawa drobnych błędów,

Zmiany w QMPlay2 build 14.12.23:
	- poprawione przerywanie odtwarzania podczas pracy "youtube-dl" oraz z protokołami innymi niż HTTP i HTTPS,
	- możliwość przewijania do tyłu w strumieniach sieciowych bez ponownego łączenia się z serwerem,
	- MPRIS2 obsługuje już nazwy utworów nawet gdy nie zawierają one tytułu,
	- usunięta możliwość aktualizacji w systemach innych niż Windows,
	- automatyczna aktualizacja programu "youtube-dl",
	- drobne poprawki wyszukiwania w YouTube,
	- dodany cache do klasy ustawień,
	- usprawnienie buforowania,

Zmiany w QMPlay2 build 14.12.01:
	- wczytywanie czcionek napisów z katalogu, w którym znajdują się napisy ASS/SSA,
	- dodany "User-Agent" dla połączeń HTTP (ProstoPleer znowu działa),
	- poprawa kompilacji dla Windows x86-64,
	- drobne poprawy błędów,

Zmiany w QMPlay2 build 14.10.07:
	- przywrócone działanie napisów ASS z kontenera Matroska w FFMpeg 2.4.x,
	- obsługa zmiany metadanych przy użyciu FFMpeg 2.4.x,
	- możliwość pamiętania ustawień korektora wideo,
	- sortowanie dodawanych katalogów do playlisty,
	- poprawa działania YouTube,
	- dodana obsługa pleer.com,
	- poprawa działania OpenGL,