@@ -1881,10 +1881,6 @@
         <translation>User</translation>
     </message>
     <message>
-        <source>Ilość wyświetleń</source>
-        <translation>Number of views</translation>
-    </message>
-    <message>
         <source>Kolejkuj</source>
         <translation>Enqueue</translation>
     </message>
