@@ -1,3 +1,6 @@
+Zmiany w QMPlay2 build 15.05.09:
+	- Poprawa wyszukiwania w YouTube,
+
 Zmiany w QMPlay2 build 15.03.28:
 	- opuszczenie okna przez mysz w trybie pełnoekranowym powoduje zamknięcie wszystkich widgetów,
 	- możliwość wybrania domyślnego języka dla napisów i dźwięku,
